# OracleCouncil

./: .gitignore  CLASS.md  CLASS_REVIEW.md  FIX_PLAN.md  QandA.md  README.md  SEQUENCE.md  SPEC.md  STATE.md  TESTCASE.md  USECASE.md  dream.md  hikitsugi.md  pyproject.toml
.autoloop/: config.json  run-autoloop.ps1  tasks.yaml
articles/: oracle_council_facebook.md  oracle_council_note.md
config/: agents.yaml
docs/: adapter-spike.md  note-draft.md
evaluation/x8/: README.md  eval-set-v1.json
instructions/: instructions.md  result.md
loop/: SPEC.md  note.md
scripts/: collect_metrics.py  run_x8_evaluation.py  sample_questions.txt  spike_claude_websearch.py
src/oracle_council/: __init__.py  assignment.py  budget.py  clarification.py  classification.py  cli.py  evidence.py  fakes.py  models.py  orchestrator.py  phase_schema.py  storage.py  trace.py
src/oracle_council/adapters/: __init__.py  agy.py  base.py  claude.py  codex.py  grok.py
tests/contract/: test_adapters.py
tests/e2e/: test_real_adapter_e2e.py
tests/unit/: test_adapter_capabilities.py  test_adapter_error_classification.py  test_adapter_schema.py  test_adapter_selection.py  test_adapter_unicode.py  test_assignment.py  test_budget.py  test_cancellation.py  test_clarification.py  test_classification.py  test_claude_envelope.py  test_claude_transport.py  test_cli.py  test_cli_search_provider.py  test_codex_transport.py  test_collect_metrics.py  test_evidence.py  test_exit_code_separation.py  test_grok_transport.py  test_orchestrator.py  test_phase_schema.py  test_records.py  test_run_x8_evaluation.py  test_s10_probe_snapshot.py  test_storage.py  test_trace.py
(+8 files in other folders)
