[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oracle-council"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
oracle = "oracle_council.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/oracle_council"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "live: opt-in tests that invoke an installed external CLI or service",
  "expensive: opt-in tests with high latency or external cost",
]
pythonpath = ["src"]
